Make XMLHttpRequest dispatch an error event when it fails.  Bug 218236, patch by Wladimir Palant <trev@gtchat.de>, r=jst, sr=bzbarsky